--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
+    "@types/nodemailer": "^7.0.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "next-i18next": "^15.4.2",
+    "nodemailer": "^7.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-google-recaptcha-v3": "^1.11.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "three": "^0.179.1"
