--- a/package.json
+++ b/package.json
@@ -1,40 +1,36 @@
 {
-  "name": "gpvc-website",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@react-three/drei": "^10.6.1",
-    "@react-three/fiber": "^9.3.0",
-    "@types/nodemailer": "^7.0.2",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.23.12",
-    "lucide-react": "^0.539.0",
-    "next": "16.0.7",
-    "next-i18next": "^15.4.2",
-    "nodemailer": "^7.0.10",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "react-google-recaptcha-v3": "^1.11.0",
-    "swiper": "^11.2.10",
-    "tailwind-merge": "^3.3.1",
-    "three": "^0.179.1"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/three": "^0.179.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.6",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+	"name": "gpvc-website",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@types/nodemailer": "^7.0.2",
+		"clsx": "^2.1.1",
+		"framer-motion": "^12.23.12",
+		"lucide-react": "^0.539.0",
+		"next": "16.0.7",
+		"next-i18next": "^15.4.2",
+		"nodemailer": "^7.0.10",
+		"react": "^19.2.1",
+		"react-dom": "^19.2.1",
+		"react-google-recaptcha-v3": "^1.11.0",
+		"swiper": "^11.2.10",
+		"tailwind-merge": "^3.3.1"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "15.4.6",
+		"tailwindcss": "^4",
+		"typescript": "^5"
+	}
 }
